database added and transfer funds functionality improved

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,9 @@
 PORT=5000
 JWT_SECRET=FGSDBCSDJBCKssjgcsdjchks73578724294
+
+MONGO_URI=mongodb://localhost:27017/securebanking
+
+EMAIL_USER=sakshisalunke1111@gmail.com
+EMAIL_PASS=vzsy oxmr wasd zwru
+
+REACT_APP_API_URL=http://localhost:3000
